xee-xpath-ast/src/parser/snapshots/xee_xpath_ast__parser__tests__reserved_function_name.snap
---
source: xee-xpath-ast/src/parser/mod.rs
expression: "parse_xpath_simple(\"switch()\")"
---
Err("[multiple errors found at 7..8]")
