xee-xpath-ast/src/parser/snapshots/xee_xpath_ast__parser__tests__reserved_function_name_reference.snap
---
source: xee-xpath-ast/src/parser/mod.rs
expression: "parse_xpath_simple(\"switch#2\")"
---
Err("[multiple errors found at 0..8]")
