xee-xpath-ast/src/parser/snapshots/xee_xpath_ast__parser__tests__signature_with_params.snap
---
source: xee-xpath-ast/src/parser/mod.rs
expression: "ast::Signature::parse(\"fn:foo($a as xs:decimal*) as xs:integer\", &namespaces)"
---
Ok(Signature(
  name: Name(
    name: "foo",
    prefix: Some("fn"),
    namespace: Some("http://www.w3.org/2005/xpath-functions"),
  ),
  params: [
    SignatureParam(
      name: Name(
        name: "a",
        prefix: None,
        namespace: None,
      ),
      type_: Item(Item(
        item_type: AtomicOrUnionType(Decimal),
        occurrence: Many,
      )),
    ),
  ],
  return_type: Item(Item(
    item_type: AtomicOrUnionType(Integer),
    occurrence: One,
  )),
))
