xee-xpath-ast/src/parser/snapshots/xee_xpath_ast__parser__tests__signature_without_params.snap
---
source: xee-xpath-ast/src/parser/mod.rs
expression: "ast::Signature::parse(\"fn:foo() as xs:integer\", &namespaces)"
---
Ok(Signature(
  name: Name(
    name: "foo",
    prefix: Some("fn"),
    namespace: Some("http://www.w3.org/2005/xpath-functions"),
  ),
  params: [],
  return_type: Item(Item(
    item_type: AtomicOrUnionType(Name(
      name: "integer",
      prefix: Some("xs"),
      namespace: Some("http://www.w3.org/2001/XMLSchema"),
    )),
    occurrence: One,
  )),
))
