xee-xpath-ast/src/parser/snapshots/xee_xpath_ast__parser__tests__signature_without_params2.snap
---
source: xee-xpath-ast/src/parser/mod.rs
expression: "ast::Signature::parse(\"fn:foo() as xs:integer*\", &namespaces)"
---
Ok(Signature(
  name: Name(
    name: "foo",
    prefix: Some("fn"),
    namespace: Some("http://www.w3.org/2005/xpath-functions"),
  ),
  params: [],
  return_type: Item(Item(
    item_type: AtomicOrUnionType(Integer),
    occurrence: Many,
  )),
))
