xee-xpath-ast/src/parser/snapshots/xee_xpath_ast__parser__tests__single_for_expr.snap
---
source: xee-xpath-ast/src/parser/mod.rs
expression: "ast::ExprSingle::parse(\"for $x in 1 return 5\")"
---
Ok(For(ForExpr(
  var_name: Name(
    name: "x",
    prefix: None,
    namespace: None,
  ),
  var_expr: Path(PathExpr(
    steps: [
      PrimaryExpr(Literal(Integer((Positive, [
        1,
      ])))),
    ],
  )),
  return_expr: Path(PathExpr(
    steps: [
      PrimaryExpr(Literal(Integer((Positive, [
        5,
      ])))),
    ],
  )),
)))
