xee-xpath-ast/src/parser/snapshots/xee_xpath_ast__parser__tests__single_let_expr_var_ref.snap
---
source: xee-xpath-ast/src/parser/mod.rs
expression: "ast::ExprSingle::parse(\"let $x := 1 return $x\")"
---
Ok(Let(LetExpr(
  var_name: Name(
    name: "x",
    prefix: None,
    namespace: None,
  ),
  var_expr: Path(PathExpr(
    steps: [
      PrimaryExpr(Literal(Integer((Positive, [
        1,
      ])))),
    ],
  )),
  return_expr: Path(PathExpr(
    steps: [
      PrimaryExpr(VarRef(Name(
        name: "x",
        prefix: None,
        namespace: None,
      ))),
    ],
  )),
)))
